# quadrupy

./: .gitignore  CartPole.py  ControlFramework.py  DoubleIntegrator.py  DoubleIntegrator.urdf  LICENSE  Makefile  Quadrotor.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_go2_sim.py  run_walker.py  stand_example_py.py  tracker.py
WalkingFramework/: WalkingSystem.py  stand_example_py.py
WalkingFramework/bindings/: .gitignore  CMakeLists.txt  hardware_binding.cpp  util.hpp  utils.cpp
WalkingFramework/configs/: Go2Walking.yaml
WalkingFramework/controllers/: QuadrupedWBC.py  WalkingController.py
WalkingFramework/observers/: InekfObserver.py  WalkingObserver.py
WalkingFramework/robots/: Go2Robot.py  WalkingRobot.py
WalkingFramework/targets/: WalkingTarget.py
configs/: Go2Walking.yaml
grafana/dashboards/: go2.json
observer_tutorial/: ControlFramework.py  README.md
src/quadrupy/: WalkingSystem.py
src/quadrupy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quadrupy/bindings/: CMakeLists.txt  util.hpp
src/quadrupy/controllers/: QuadrupedWBC.py  WalkingController.py
src/quadrupy/observers/: InekfObserver.py
src/quadrupy/quadrupy.egg-info/: SOURCES.txt  top_level.txt
src/quadrupy/robots/: Go2Robot.py  WalkingRobot.py
src/quadrupy/robots/assets/Go2/: go2_description.urdf
src/quadrupy/targets/: WalkingTarget.py
tutorial/: CartPole.py  CartPole.urdf  ControlFramework.py  DoubleIntegrator.py  Quadrotor.py  README.md  quadrotor.urdf
